Fixed up grid layout bugs, drop-down menu links work

--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,15 @@ li {
   font-size: 18px;
 }
 .group-page {
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .group-body {
   background-color: white;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
 }
@@ -120,4 +121,10 @@ li {
 .dropdown:hover .dropbtn {
     background-color: #2574A9;
     color: black;
+}
+.no-gutter {
+  padding: 0px;
+}
+.row {
+  margin: 0px;
 }
